--- a/clsProj/src/com/increpas/www/resource/cls.properties
+++ b/clsProj/src/com/increpas/www/resource/cls.properties
@@ -30,6 +30,8 @@
 /reBoard/reBoard.cls=com.increpas.www.controller.reBoard.ReBoardList
 # 댓글입력 폼 보기 요청
 /reBoard/reBoardReply.cls=com.increpas.www.controller.reBoard.ReBoardReply
+# 댓글(원문)입력 쓰기 처리 요청
+/reBoard/reBoardWriteProc.cls=com.increpas.www.controller.reBoard.ReBoardWriteProc
 # 댓글입력 쓰기 처리 요청
 /reBoard/reBoardRplProc.cls=com.increpas.www.controller.reBoard.ReBoardRplProc
 # 댓글게시판 수정 요청
