--- a/clsProj/src/com/increpas/www/resource/cls.properties
+++ b/clsProj/src/com/increpas/www/resource/cls.properties
@@ -38,3 +38,12 @@
 #/reBoard/reBoard.cls=com.increpas.www.controller.reBoard.ReBoardList
 # 댓글게시판 삭제 요청
 /reBoard/reBoardDel.cls=com.increpas.www.controller.reBoard.ReBoardDel
+
+###############################################################
+
+# 설문조사 폼 요청
+/survey/survey.cls=com.increpas.www.controller.survey.Survey
+# 설문 조사 처리 요청
+/survey/surveyProc.cls=com.increpas.www.controller.survey.SurveyProc
+# 설문 결과 폼 요청
+/survey/surveyResult.cls=com.increpas.www.controller.survey.SurveyResult
