--- a/clsProj/src/com/increpas/www/resource/cls.properties
+++ b/clsProj/src/com/increpas/www/resource/cls.properties
@@ -47,3 +47,5 @@
 /survey/surveyProc.cls=com.increpas.www.controller.survey.SurveyProc
 # 설문 결과 폼 요청
 /survey/surveyResult.cls=com.increpas.www.controller.survey.SurveyResult
+# 설문 등록 뷰 보기 요청
+/survey/surveyAdd.cls=com.increpas.www.controller.survey.SurveyAddForm
