--- a/clsProj/.classpath
+++ b/clsProj/.classpath
@@ -13,5 +13,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="D:/class/JSP/git/clsProj/myJSP/clsProj/WebContent/WEB-INF/lib/cos-05Nov2002.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
